third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/no-close-2.stderr
TOML parse error at line 1, column 18
  |
1 | no-close-2 = [1,
  |                  ^
invalid array
expected `]`
